#16: get stock
