# routes/api.php
@@ -38,6 +38,7 @@ $router->prefix('/api', function ($router) {
             $router->get('/{library}', [LibraryController::class, 'get', ['permission:'.Permissions::LIBRARIES_GET]]);
             $router->put('/{library}', [LibraryController::class, 'update', ['permission:'.Permissions::LIBRARIES_UPDATE]]);
             $router->delete('/{library}', [LibraryController::class, 'delete', ['permission:'.Permissions::LIBRARIES_DELETE]]);
+            $router->get('/{library}/stocks', [StockController::class, 'listForLibrary'], ['permission:'.Permissions::STOCKS_LIST]);
         });
         $router->group(['prefix' => '/authors'], function ($router) {
             $router->post('/', [AuthorController::class, 'create', ['permission:'.Permissions::AUTHORS_CREATE]]);
@@ -59,9 +60,11 @@ $router->prefix('/api', function ($router) {
             $router->get('/{book}', [BookController::class, 'get', ['permission:'.Permissions::BOOKS_GET]]);
             $router->put('/{book}', [BookController::class, 'update', ['permission:'.Permissions::BOOKS_UPDATE]]);
             $router->delete('/{book}', [BookController::class, 'delete', ['permission:'.Permissions::BOOKS_DELETE]]);
+            $router->get('/{book}/stocks', [StockController::class, 'listForBook'], ['permission:'.Permissions::STOCKS_LIST]);
         });
         $router->group(['prefix' => '/stocks'], function ($router) {
             $router->post('/', [StockController::class, 'create'], ['permission:'.Permissions::STOCKS_CREATE]);
+            $router->get('/{stock}', [StockController::class, 'get'], ['permission:'.Permissions::STOCKS_GET]);
         });
     });
 });
